test/classes/nilability/demo2.good
demo2.chpl:11: error: cannot default-initialize a: borrowed C
note: non-nilable class type 'borrowed C' does not support default initialization
note: Consider using the type borrowed C? instead
